# trvalypobytexamchecker

./: .env.sample  .gitignore  Dockerfile_bot  Dockerfile_checker  Dockerfile_fetcher  Dockerfile_fetcher_curl  LICENSE  README.md  a2exams_bot.py  bot-checker-docker-compose.yml  bot-docker-compose.yml  check_a2_slots.py  checker-docker-compose.yml  checker-fetcher-docker-compose.yml  docker-compose.yml  fetcher-curl-docker-compose.yml  fetcher-docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/: check_updates.py  fetch_updates.py
src/bot/: a2exams_bot.py
src/checker/: .a2exams_checker.py.swp  a2exams_checker.py
src/fetcher/: a2exams_fetcher.py
src/utils/: __init__.py
tests/: conftest.py  test_bot.py  test_checker.py  test_fetcher.py  test_parse.py
tests/data/: Online přihláška A2 – Jazyková zkouška A2.html  kolin.html  last_fetched.html  last_fetched.json  register.html  usti_schools.html
