[build-system]
requires = [
    "aiohttp",
    "asyncio",
    "beautifulsoup4",
    "fake-useragent==1.3.0",
    "lxml",
    "pysocks",
    "pytest",
    "pytz",
    "requests",
    "unidecode",

    "python-telegram-bot==13.5",
    "redis",
    "unidecode",
    "setuptools"
]
build-backend = "setuptools.build_meta"
