[metadata]
name = trvalypobytexamchecker-fernflower
version = 0.0.1
author = Inessa Vasilevskaya
author_email = inavasilevskaya@gmail.com
description = A set of tools to register for an A2 Czech exam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fernflower/trvalypobytexamchecker/
project_urls =
    Bug Tracker = https://github.com/fernflower/trvalypobytexamchecker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
